test/fail/ifelse.cll
if:int (true) {
    if:int (true) {
        0;
    } else {
        0;
        1.0;
    };
} else {
    0;
};
